--- a/.github/workflows/rapid_undistort.yml
+++ b/.github/workflows/rapid_undistort.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install pytest
-          pytest tests/test_uvdoc.py
+          pytest tests/test_basic.py
 
   GenerateWHL_PushPyPi:
     needs: UnitTesting
@@ -45,7 +45,7 @@ jobs:
           pip install -r requirements.txt
           python -m pip install --upgrade pip
           pip install wheel get_pypi_latest_version
-          python setup_uvdoc.py bdist_wheel "${{ github.ref_name }}"
+          python setup_undistort.py bdist_wheel "${{ github.ref_name }}"
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@v1.5.0
